@@ -1,8 +1,10 @@
-CHANGES.txt - 04/09/2004
+CHANGES.txt - 04/20/2004
 ------------------------
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- The image filters did not correctly load 1-bit PNG
+	  files (STR #687)
 	- The pdftops filter did not show all annotation objects
 	  in a PDF file (STR #674)
 	- The pdftops filter did not print the contents of
